--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,16 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "includes": ["**", "!node_modules", "!.next", "!dist", "!build"]
+    "includes": [
+      "**",
+      "!node_modules",
+      "!.next",
+      "!dist",
+      "!build",
+      "!components/ui",
+      "!app/page.tsx",
+      "!db/migrations/**"
+    ]
   },
   "formatter": {
     "enabled": true,
