--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postgres": "^3.4.7",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "recharts": "2.15.4",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2"
   },
